...
    <string name="action_resume">Resume</string>
    <string name="action_start">Start</string>
    <string name="action_clear">Clear</string>
    <string name="title_record_dialog">Track record</string>

    <!-- Settings -->
    <string name="sync_settings">Sync tiles and rides</string>
    <string name="style_settings">Style settings</string>

    <string-array name="map_style_entries">
        <item>Streets</item>
        <item>Dark</item>
        <item>Light</item>
        <item>Bright</item>
...
