...
                android:layout_margin="16dp"
                app:layout_anchor="@id/mapView"
                app:layout_anchorGravity="bottom|right|end"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                style="@style/vv_action_button"
                android:id="@+id/recordButton"
                android:src="@drawable/ic_record"
                android:layout_margin="16dp"
                app:layout_anchor="@id/mapView"
                app:layout_anchorGravity="top|right|end"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                style="@style/vv_action_button"
                android:id="@+id/settingsButton"
                android:src="@drawable/ic_settings"
                android:layout_margin="16dp"
                app:layout_anchor="@id/mapView"
                app:layout_anchorGravity="top|left|start"/>

            <TextView android:visibility="visible"
...
